==> rusefi/rusefi/firmware/config/boards/kinetis/OS/os/hal/ports/KINETIS/LLD/FTMv2/hal_pwm_lld.c <==
#include "hal.h"
#include "kinetis_stm32.h"
#define CHANNEL CONTROLS

static void pwm_lld_serve_interrupt(PWMDriver *pwmp) {
  uint32_t sr;

  sr = pwmp->ftm->SC;
  pwmp->ftm->SC = sr&(~FTM_SC_TOFx);

  if (((sr & FTM_SC_TOFx) != 0) &&                          /* Timer Overflow */
      ((sr & FTM_SC_TOIEx) != 0) &&
      (pwmp->config->callback != NULL)) {
    pwmp->config->callback(pwmp);
  }

  uint8_t n=0;
  for(n=0;n<pwmp->channels;n++) {
    sr = pwmp->ftm->CHANNEL[n].CnSC;
    pwmp->ftm->CHANNEL[n].CnSC = sr&(~FTM_CnSC_CHFx);
    if (((sr & FTM_CnSC_CHFx) != 0) &&
        ((sr & FTM_CnSC_CHIEx) != 0) &&
        (pwmp->config->channels[n].callback != NULL)) {
      pwmp->config->channels[n].callback(pwmp);
    }
  }
}

void pwm_lld_init(void) {

#if KINETIS_PWM_USE_FTM0
  pwmObjectInit(&PWMD1);
  PWMD1.channels = KINETIS_FTM0_CHANNELS;
  PWMD1.ftm = FTM0;
#endif

#if KINETIS_PWM_USE_FTM1
  pwmObjectInit(&PWMD2);
  PWMD2.channels = KINETIS_FTM1_CHANNELS;
  PWMD2.ftm = FTM1;
#endif

#if KINETIS_PWM_USE_FTM2
  pwmObjectInit(&PWMD3);
  PWMD3.channels = KINETIS_FTM2_CHANNELS;
  PWMD3.ftm = FTM2;
#endif

#if KINETIS_PWM_USE_FTM3
  pwmObjectInit(&PWMD4);
  PWMD4.channels = KINETIS_FTM3_CHANNELS;
  PWMD4.ftm = FTM3;
#endif
}

void pwm_lld_start(PWMDriver *pwmp) {
  uint16_t psc;
  uint8_t i=0;

  if (pwmp->state == PWM_STOP) {
    /* Clock activation and timer reset.*/
#if KINETIS_PWM_USE_FTM0
    if (&PWMD1 == pwmp) {
#ifdef KE1xF
      CLOCK_EnableClock(kCLOCK_Ftm0);
#else
      SIM->SCGC6 |= SIM_SCGC6_FTM0;
#endif
      nvicEnableVector(FTM0_IRQn, KINETIS_PWM_FTM0_PRIORITY);
    }
#endif

#if KINETIS_PWM_USE_FTM1
    if (&PWMD2 == pwmp) {
#ifdef KE1xF
      CLOCK_EnableClock(kCLOCK_Ftm1);
#else
      SIM->SCGC6 |= SIM_SCGC6_FTM1;
#endif
      nvicEnableVector(FTM1_IRQn, KINETIS_PWM_FTM1_PRIORITY);
    }
#endif

#if KINETIS_PWM_USE_FTM2
    if (&PWMD3 == pwmp) {
#ifdef KE1xF
      CLOCK_EnableClock(kCLOCK_Ftm2);
#else
      SIM->SCGC3 |= SIM_SCGC3_FTM2;
#endif
      nvicEnableVector(FTM2_IRQn, KINETIS_PWM_FTM2_PRIORITY);
    }
#endif

#if KINETIS_PWM_USE_FTM3
    if (&PWMD4 == pwmp) {
#ifdef KE1xF
      CLOCK_EnableClock(kCLOCK_Ftm3);
#else
      SIM->SCGC3 |= SIM_SCGC3_FTM3;
#endif
      nvicEnableVector(FTM3_IRQn, KINETIS_PWM_FTM3_PRIORITY);
    }
#endif
  }
  pwmp->ftm->MODE =  FTM_MODE_FTMEN_MASK|FTM_MODE_PWMSYNC_MASK;
  pwmp->ftm->SYNC =  FTM_SYNC_CNTMIN_MASK|FTM_SYNC_CNTMAX_MASK
                    |FTM_SYNC_SWSYNC_MASK;
  pwmp->ftm->COMBINE =  FTM_COMBINE_SYNCEN3_MASK | FTM_COMBINE_SYNCEN2_MASK
                      | FTM_COMBINE_SYNCEN1_MASK | FTM_COMBINE_SYNCEN0_MASK;
  pwmp->ftm->SYNCONF =  FTM_SYNCONF_SYNCMODE_MASK;

  pwmp->ftm->CNTIN = 0x0000;
  //~ pwmp->ftm->SC = 0;       /* Disable FTM counter.*/
  pwmp->ftm->CNT = 0x0000; /* Clear count register.*/
 
  /* Prescaler value calculation.*/
  psc = (KINETIS_FTM_FREQUENCY / pwmp->config->frequency);
  //~ /* Prescaler must be power of two between 1 and 128.*/
  osalDbgAssert(psc <= 128 && !(psc & (psc - 1)), "invalid frequency");
  //~ /* Prescaler register value determination.
     //~ Prescaler register value conveniently corresponds to bit position,
     //~ i.e., register value for prescaler CLK/64 is 6 ((1 << 6) == 64).*/
  for (i = 0; i < 8; i++) {
    if (psc == (unsigned)(1 << i)) {
      break;
    }
  }

  /* Set prescaler and clock mode.
     This also sets the following:
          CPWMS up-counting mode
          Timer overflow interrupt disabled
          DMA disabled.*/
  pwmp->ftm->SC = FTM_SC_CLKS(1) | FTM_SC_PS(i);
  /* Configure period */
  pwmp->ftm->MOD = pwmp->period-1;
  pwmp->ftm->PWMLOAD = FTM_PWMLOAD_LDOK_MASK;
}

void pwm_lld_stop(PWMDriver *pwmp) {

  /* If in ready state then disables the PWM clock.*/
  if (pwmp->state == PWM_READY) {
#if KINETIS_PWM_USE_FTM0
    if (&PWMD1 == pwmp) {
#ifdef KE1xF
      PCC->CLKCFG[PCC_FLEXTMR0_INDEX] &= ~PCC_CLKCFG_CGC(1);
#else
      SIM->SCGC6 &= ~SIM_SCGC6_FTM0;
#endif
      nvicDisableVector(FTM0_IRQn);
    }
#endif

#if KINETIS_PWM_USE_FTM1
    if (&PWMD2 == pwmp) {
#ifdef KE1xF
      PCC->CLKCFG[PCC_FLEXTMR1_INDEX] &= ~PCC_CLKCFG_CGC(1);
#else
      SIM->SCGC6 &= ~SIM_SCGC6_FTM1;
#endif
      nvicDisableVector(FTM1_IRQn);
    }
#endif

#if KINETIS_PWM_USE_FTM2
    if (&PWMD3 == pwmp) {
#ifdef KE1xF
      PCC->CLKCFG[PCC_FLEXTMR2_INDEX] &= ~PCC_CLKCFG_CGC(1);
#else
      SIM->SCGC3 &= ~SIM_SCGC3_FTM2;
#endif
      nvicDisableVector(FTM2_IRQn);
    }
#endif

#if KINETIS_PWM_USE_FTM3
    if (&PWMD4 == pwmp) {
#ifdef KE1xF
      PCC->CLKCFG[PCC_FLEXTMR3_INDEX] &= ~PCC_CLKCFG_CGC(1);
#else
      SIM->SCGC3 &= ~SIM_SCGC3_FTM3;
#endif
      nvicDisableVector(FTM3_IRQn);
    }
#endif
    /* Disable FTM counter.*/
    pwmp->ftm->SC = 0;
    pwmp->ftm->MOD = 0;
  }
}

void pwm_lld_enable_channel(PWMDriver *pwmp,
                            pwmchannel_t channel,
                            pwmcnt_t width) {
  uint32_t mode = FTM_CnSC_MSBx; /* Edge-aligned PWM mode.*/

  switch (pwmp->config->channels[channel].mode & PWM_OUTPUT_MASK) {
  case PWM_OUTPUT_ACTIVE_HIGH:
    mode |= FTM_CnSC_ELSBx;
    break;
  case PWM_OUTPUT_ACTIVE_LOW:
    mode |= FTM_CnSC_ELSAx;
    break;
  }

  if (pwmp->ftm->CHANNEL[channel].CnSC & FTM_CnSC_CHIEx)
    mode |= FTM_CnSC_CHIEx;

  pwmp->ftm->CHANNEL[channel].CnSC = mode;
  pwmp->ftm->CHANNEL[channel].CnV = width;
  pwmp->ftm->PWMLOAD = FTM_PWMLOAD_LDOK_MASK;
}

void pwm_lld_disable_channel(PWMDriver *pwmp, pwmchannel_t channel) {

  pwmp->ftm->CHANNEL[channel].CnSC = 0;
  pwmp->ftm->CHANNEL[channel].CnV = 0;
}
